--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/green"
                 android:textSize="14sp"
-                android:typeface="monospace" />
+                android:typeface="sans" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -114,7 +114,6 @@
                 android:text="Open New Form"
                 android:textColor="@color/colorAccent"
                 android:textSize="14sp" />
-
 
 
             <Button
@@ -204,13 +203,13 @@
                     android:visibility="gone" />
 
                 <Button
-                    android:id="@+id/openF"
+                    android:id="@+id/open4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Section F"
-                    android:visibility="gone" />
+                    android:onClick="OpenSection4"
+                    android:text="Section 4" />
 
                 <Button
                     android:id="@+id/openG"
