--- a/app/src/main/res/layout/activity_f1_section04.xml
+++ b/app/src/main/res/layout/activity_f1_section04.xml
@@ -99,16 +99,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS421"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS421a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS421b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -124,16 +127,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS422"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS422a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS422b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -149,16 +155,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS423"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS423a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS423b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -166,25 +175,27 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
                         android:layout_gravity="center_horizontal"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center"
                         android:text="@string/RS424"
-                            android:background="@color/colorPrimaryDark"
-                            android:gravity="center"
                         android:textAppearance="?android:attr/textAppearanceLarge" />
 
                     <RadioGroup
                         android:id="@+id/RS424"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS424a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS424b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -200,29 +211,32 @@
 
                     <RadioGroup
                         android:id="@+id/RS4296"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS4296a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
-
-                        <EditText
-                            android:id="@+id/RS4296ax"
-                            android:layout_width="match_parent"
-                            android:hint="@string/specify"
-                            android:tag="RS4296a"
-                            android:text='@{RS4296a.checked? RS4296ax.getText().toString() : "" }'
-                            android:layout_height="wrap_content"
-                            android:digits="@string/ed_sentence"
-                            android:visibility='@{RS4296a.checked? View.VISIBLE : View.GONE}' />
 
                         <RadioButton
                             android:id="@+id/RS4296b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
+
+                    <EditText
+                        android:id="@+id/RS4296ax"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits="@string/ed_sentence"
+                        android:hint="@string/specify"
+                        android:tag="RS4296a"
+                        android:text='@{RS4296a.checked? RS4296ax.getText().toString() : "" }'
+                        android:visibility='@{RS4296a.checked? View.VISIBLE : View.GONE}' />
 
                 </LinearLayout>
 
@@ -247,16 +261,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS43"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS43a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS43b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -294,16 +311,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS441"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS441a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS441b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -320,16 +340,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS442"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS442a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS442b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -346,16 +369,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS443"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS443a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS443b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -372,16 +398,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS444"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS444a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS444b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -398,16 +427,19 @@
 
                     <RadioGroup
                         android:id="@+id/RS445"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS445a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS445b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
@@ -424,29 +456,32 @@
 
                     <RadioGroup
                         android:id="@+id/RS4496"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS4496a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
-
-                        <EditText
-                            android:id="@+id/RS4496ax"
-                            android:layout_width="match_parent"
-                            android:hint="@string/specify"
-                            android:tag="RS4496a"
-                            android:text='@{RS4496a.checked? RS4496ax.getText().toString() : "" }'
-                            android:layout_height="wrap_content"
-                            android:digits="@string/ed_sentence"
-                            android:visibility='@{RS4496a.checked? View.VISIBLE : View.GONE}' />
 
                         <RadioButton
                             android:id="@+id/RS4496b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                     </RadioGroup>
+
+                    <EditText
+                        android:id="@+id/RS4496ax"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits="@string/ed_sentence"
+                        android:hint="@string/specify"
+                        android:tag="RS4496a"
+                        android:text='@{RS4496a.checked? RS4496ax.getText().toString() : "" }'
+                        android:visibility='@{RS4496a.checked? View.VISIBLE : View.GONE}' />
 
                 </LinearLayout>
 
@@ -471,21 +506,25 @@
 
                     <RadioGroup
                         android:id="@+id/RS45"
-                        style="@style/radiogroup">
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/RS45a"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
                             android:id="@+id/RS45b"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/no" />
 
                         <RadioButton
                             android:id="@+id/RS4598"
                             style="@style/radiobutton"
+                            android:layout_weight="1"
                             android:text="@string/RS4598" />
 
                     </RadioGroup>
